[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/chart_loader.gd" type="Script" id=1]
[ext_resource path="res://skins/test_skin/taikobigcircle.png" type="Texture" id=2]
[ext_resource path="res://skins/test_skin/taiko-drum-inner.png" type="Texture" id=3]
[ext_resource path="res://skins/test_skin/taiko-drum-outer.png" type="Texture" id=4]
[ext_resource path="res://skins/test_skin/taiko-bar-left.png" type="Texture" id=5]
[ext_resource path="res://skins/test_skin/taiko-bar-right.png" type="Texture" id=6]
[ext_resource path="res://game/scenes/settings_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/scenes/volume_control.tscn" type="PackedScene" id=8]
[ext_resource path="res://skins/test_skin/osu_rwxudnxmu5.png" type="Texture" id=9]
[ext_resource path="res://scripts/temploadchart.gd" type="Script" id=10]
[ext_resource path="res://scripts/drum_interaction.gd" type="Script" id=11]
[ext_resource path="res://skins/test_skin/taiko-drum-hitnormal.wav" type="AudioStream" id=14]
[ext_resource path="res://scripts/hit_manager.gd" type="Script" id=15]
[ext_resource path="res://skins/test_skin/taiko-hit300.png" type="Texture" id=16]
[ext_resource path="res://skins/test_skin/taiko-drum-hitclap.wav" type="AudioStream" id=17]
[ext_resource path="res://scripts/hit_error.gd" type="Script" id=18]
[ext_resource path="res://skins/test_skin/approachcircle.png" type="Texture" id=20]
[ext_resource path="res://skins/test_skin/taiko-hit100.png" type="Texture" id=21]
[ext_resource path="res://skins/test_skin/taiko-drum-hitwhistle.wav" type="AudioStream" id=22]
[ext_resource path="res://skins/test_skin/untitled.png" type="Texture" id=23]
[ext_resource path="res://skins/test_skin/taiko-hit0.png" type="Texture" id=24]
[ext_resource path="res://skins/test_skin/taiko-drum-hitfinish.wav" type="AudioStream" id=25]
[ext_resource path="res://fonts/noto_sans_jp-bold.otf" type="DynamicFontData" id=29]
[ext_resource path="res://scripts/scenes/gameplay.gd" type="Script" id=30]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=2]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 29 )

[node name="Gameplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource( 30 )
__meta__ = {
"_edit_vertical_guides_": [ -119.0 ]
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.215686, 0.215686, 0.215686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7

[node name="ref" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="ref2" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 23 )
expand = true

[node name="BarRight" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -240.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 170 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="HitPointOffset" type="Control" parent="BarRight"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 360.0
margin_top = -21.0
margin_right = 360.0
margin_bottom = -21.0
rect_scale = Vector2( 1.9, 1.9 )

[node name="HitPoint" type="TextureRect" parent="BarRight/HitPointOffset"]
self_modulate = Color( 1, 1, 1, 0.435294 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 65.0
margin_bottom = 65.0001
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64.5, 64.5 )
texture = ExtResource( 2 )
expand = true

[node name="Rim" type="TextureRect" parent="BarRight/HitPointOffset/HitPoint"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 64.5, 64.5 )
texture = ExtResource( 20 )
expand = true

[node name="ObjectContainers" type="Control" parent="BarRight/HitPointOffset"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EtcContainer" type="Control" parent="BarRight/HitPointOffset/ObjectContainers"]
margin_right = 40.0
margin_bottom = 40.0

[node name="NoteContainer" type="Control" parent="BarRight/HitPointOffset/ObjectContainers"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Judgements" type="Control" parent="BarRight/HitPointOffset"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.75
margin_top = 26.35
margin_right = 25.75
margin_bottom = 26.35

[node name="JudgeAccurate" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )
stretch_mode = 4

[node name="JudgeInaccurate" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 21 )
stretch_mode = 4

[node name="JudgeMiss" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 24 )
stretch_mode = 4

[node name="BarLeft" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_top = 304.0
margin_right = 254.0
margin_bottom = -498.0
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true

[node name="DrumVisual" type="Control" parent="BarLeft"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftDon" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_right = 127.0
texture = ExtResource( 3 )
expand = true

[node name="RightDon" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_left = 127.0
margin_right = 254.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="LeftKat" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_right = 127.0
texture = ExtResource( 4 )
expand = true
flip_h = true

[node name="RightKat" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_left = 127.0
margin_right = 254.0
texture = ExtResource( 4 )
expand = true

[node name="Combo" type="Label" parent="BarLeft/DrumVisual"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -33.0
margin_right = 13.5
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="TimingIndicator" type="Label" parent="BarLeft"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = 65.5
margin_top = -63.5
margin_right = 144.5
margin_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 13 )
text = "Â±0"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="BarLeft/TimingIndicator"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -391.0
margin_top = -11.0
margin_right = -11.0
margin_bottom = 84.0
grow_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "0000000000"
align = 2

[node name="Accuracy" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -166.0
margin_top = 57.0
margin_right = -31.0
margin_bottom = 152.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0.00"
align = 2

[node name="AccPercent" type="Label" parent="UI/Accuracy"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -12.0
margin_top = 29.0
margin_right = 26.0
margin_bottom = 83.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "%"
align = 2
valign = 2

[node name="HitError" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -40.0
margin_right = 207.0
script = ExtResource( 18 )

[node name="Back" type="ColorRect" parent="UI/HitError"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Colors" type="HBoxContainer" parent="UI/HitError"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 13.0
margin_bottom = -13.0
custom_constants/separation = 0

[node name="MissLate" type="ColorRect" parent="UI/HitError/Colors"]
margin_right = 12.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color( 0.78125, 0.296021, 0.296021, 1 )

[node name="InaccurateLate" type="ColorRect" parent="UI/HitError/Colors"]
margin_left = 12.0
margin_right = 142.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.47451, 0.854902, 0.368627, 1 )

[node name="Accurate" type="ColorRect" parent="UI/HitError/Colors"]
margin_left = 142.0
margin_right = 271.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.321569, 0.65098, 1, 1 )

[node name="InaccurateEarly" type="ColorRect" parent="UI/HitError/Colors"]
margin_left = 271.0
margin_right = 401.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.47451, 0.854902, 0.368627, 1 )

[node name="MissEarly" type="ColorRect" parent="UI/HitError/Colors"]
margin_left = 401.0
margin_right = 414.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color( 0.780392, 0.294118, 0.294118, 1 )

[node name="MiddleMarker" type="ColorRect" parent="UI/HitError"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 1.0

[node name="HitPoints" type="Control" parent="UI/HitError"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AverageHit" type="ColorRect" parent="UI/HitError"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -2.0
margin_right = -5.0
margin_bottom = 13.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0.8 )

[node name="debug" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="debugtext" type="Label" parent="debug"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -209.0
margin_right = 152.0
margin_bottom = -144.0
grow_vertical = 0
rect_scale = Vector2( 1.9, 1.9 )
text = "Welcome to TaiClone!"
valign = 2

[node name="fpstext" type="Label" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -303.0
margin_top = -75.9999
margin_right = -249.0
margin_bottom = -61.9999
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.9, 1.9 )
text = "FPS: XXX"
align = 2
valign = 2

[node name="temploadchart" type="HBoxContainer" parent="debug"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -82.0
margin_right = 355.0
margin_bottom = -44.0
rect_scale = Vector2( 1.9, 1.9 )

[node name="LineEdit" type="LineEdit" parent="debug/temploadchart"]
margin_right = 195.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Chart Location"

[node name="LoadButton" type="Button" parent="debug/temploadchart"]
margin_left = 199.0
margin_right = 241.0
margin_bottom = 38.0
text = "Load"

[node name="PlayButton" type="Button" parent="debug/temploadchart"]
margin_left = 245.0
margin_right = 283.0
margin_bottom = 38.0
text = "Play"

[node name="AutoToggle" type="CheckBox" parent="debug/temploadchart"]
margin_left = 287.0
margin_right = 345.0
margin_bottom = 38.0
text = "Auto"

[node name="SettingsButton" type="Button" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -82.0
margin_right = -90.0
margin_bottom = -44.0
rect_scale = Vector2( 1.9, 1.9 )
text = "Settings"

[node name="VersionText" type="Label" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -399.0
margin_top = -43.9999
margin_right = -352.0
margin_bottom = -29.9999
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.9, 1.9 )
text = "v0.2 - volume slider go brrr"
align = 2

[node name="SettingsPanel" parent="debug" instance=ExtResource( 7 )]

[node name="DrumInteraction" type="Node" parent="."]
script = ExtResource( 11 )

[node name="LeftDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="LeftKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="RightDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="RightKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="FinisherDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 25 )
bus = "SFX"

[node name="FinisherKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 22 )
bus = "SFX"

[node name="DrumAnimationTween" type="Tween" parent="DrumInteraction"]

[node name="HitManager" type="Node" parent="."]
script = ExtResource( 15 )

[node name="ChartLoader" type="Node" parent="."]
script = ExtResource( 1 )
baseSVMultiplier = 3.0

[node name="StartTimer" type="Timer" parent="ChartLoader"]
one_shot = true

[node name="VolumeControl" parent="." instance=ExtResource( 8 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[connection signal="load_chart" from="debug" to="ChartLoader" method="loadAndProcessAll"]
[connection signal="pressed" from="debug/temploadchart/LoadButton" to="debug" method="load_func"]
[connection signal="pressed" from="debug/temploadchart/PlayButton" to="ChartLoader" method="playChart"]
[connection signal="toggled" from="debug/temploadchart/AutoToggle" to="HitManager" method="auto_toggled"]
[connection signal="pressed" from="debug/SettingsButton" to="debug/SettingsPanel" method="toggle_settings"]
[connection signal="hit_error_toggled" from="debug/SettingsPanel" to="." method="hit_error_toggled"]
[connection signal="late_early_changed" from="debug/SettingsPanel" to="." method="late_early_changed"]
[connection signal="offset_changed" from="debug/SettingsPanel" to="." method="offset_changed" flags=3]
[connection signal="volume_set" from="debug/SettingsPanel" to="VolumeControl" method="set_volume" flags=3]
